<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_appointment"
        android:textAppearance="@style/Text.Title" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        app:cardCornerRadius="@dimen/small_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/big_padding"
                    android:text="@string/text_date"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:textAppearance="@style/Text.EditText" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1/1/20"
                    android:textAlignment="viewEnd"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:textAppearance="@style/Text.EditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/big_padding"
                    android:text="@string/text_start_time"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:textAppearance="@style/Text.EditText" />

                <TextView
                    android:id="@+id/txtStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="00:00"
                    android:textAlignment="viewEnd"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:textAppearance="@style/Text.EditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/big_padding"
                    android:text="@string/text_doctor"
                    android:textAppearance="@style/Text.EditText" />

                <EditText
                    android:id="@+id/etDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/big_padding"
                    android:paddingTop="@dimen/big_padding"
                    android:text="@string/text_notes"
                    android:textAppearance="@style/Text.EditText" />

            </LinearLayout>

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/big_padding"
                android:paddingRight="@dimen/big_padding" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:onClick="done"
        android:text="@string/action_done" />

</LinearLayout>